fix btn align

--- a/src/assets/scss/form.scss
+++ b/src/assets/scss/form.scss
@@ -9,6 +9,11 @@ input {
   width:100%;
 }
 
+.btn.fit {
+  width: calc(100% - 30px);
+  margin: 0 15px;
+}
+
 input:-webkit-autofill {
   background: transparent !important;
   -webkit-box-shadow:0 0 0 50px black inset;
